# on_prem_deploy

./: .ansible-lint  .gitignore  .rtx.toml  .tool-versions  .yamllint.yml  CODEOWNERS  Dockerfile.test  Helpers.ps1  InstallTestDependencies.ps1  README.md  RunPesterTests.ps1  ansible.cfg  build_elixir_container.ps1  build_erlang_container.ps1  docker_stack_deploy.ps1  main.yml  pull_ecr.ps1  pull_ecr_stack_deploy.cmd.yml  pyproject.toml
.github/workflows/: build_docker_images.yaml  ci.yml  deploy_document.yml  vagrant-up.yml
cloud-init/: user-data
doc/adr/: 0001-record-architecture-decisions.md  0002-use-cloudinit-for-basic-linux-configuration.md  0003-use-ansible-for-configuration.md  0004-only-require-2fa-on-signin.md
docker/: Dockerfile.elixir  Dockerfile.erlang
group_vars/all/: s3_config.yml  users.yml  vault_aws.yml  vault_s3_config.yml
group_vars/prod/: users.yml
group_vars/splunk_base_image/: users.yml
linux/: README.md  SCU.md  Vagrantfile  build_autoinstall_iso.sh  build_cidata_iso.sh  build_network_config.sh  build_ova.sh  build_scu_iso  build_user_data.sh  build_vm_user_data.sh  build_vmware_config.sh  inventory.yml  main.yml  run-local.sh  run_qemu.sh
linux/cloud-init/: autoinstall.yaml  meta-data  user-data  vendor-data
linux/collections/: requirements.yml
linux/group_vars/all/: aws.yml  github.yml  splunk.yml  (+3 more)
linux/scu/: activate-scu  autoinstall.yaml
scripts/: DockerStackDeploy.ps1  Helpers.Tests.ps1  Helpers.ps1  PullEcr.ps1  build_cidata_iso.sh  build_ova.sh  build_user_data.sh  build_vm_user_data.sh  run_qemu.sh
scu/: install.md
(+126 files in other folders)
